<resources>
    <string name="app_name">Piattaforma COVID</string>
    <string name="login">LOGIN</string>
    <string name="username">Username...</string>
    <string name="password">Password...</string>
    <string name="loginButton">Login</string>
    <string name="reset">Svuota campi</string>
    <string name="failed">Account non esistente</string>
    <string name="backToHome">Torna alla home</string>
    <string name="title_activity_sidebar">sidebar</string>
    <string name="action_settings">Settings</string>
    <string name="homeItem">HomePage</string>
    <string name="vacciniItem">Info Vaccini</string>
    <string name="campagnaItem">Info campagna</string>
    <string name="fakeNewsItem">Fake News COVID-19</string>
    <string name="questionarioItem">Questionario</string>
    <string name="logoutItem">Logout</string>
    <string name="certificatoItem">Certificato</string>
    <string name="homepage">Benvenuto nell\'app ufficiale della piattaforma COVID. In quest\'app potrai consultare le info sul covid e visualizzare il tuo certificato. ATTENZIONE! Se non hai ottenuto le vaccinazioni necessarie non potrai visualizzare il certificato</string>
    <string name="vaccini">VACCINI</string>
    <string name="fasi">FASI VACCINAZIONE</string>
    <string name="titlePfizer">PFIZER</string>
    <string name="titleModerna">Moderna</string>
    <string name="titlejj">Johnson&amp;Johnson</string>
    <string name="titleVaxzevria">VAXZEVRIA (ex ASTRAZENECA)</string>
    <string name="pfizer">Il vaccino Pfizer prevede 2 dosi di vaccino che devono essere somministrate almeno a 3 settimane di distanza. E\' un virus a mRNA, ciò significa che viene iniettato nel corpo un RNA messaggero modificato in laboratorio. Questo RNA messaggero modificato trasporta alle cellule immunitario del nostro corpo le informazioni necessarie per sintetizzare la proteina (SPIKE) usata dal Sars-Cov-2 per infettare l\'uomo. Il vaccino ha un\'efficacia dell\' 95%</string>
    <string name="moderna">Il vaccino Moderna prevede 2 dosi di vaccino che devono essere somministrate almeno a 4 settimane di distanza. E\' un virus a mRNA, ciò significa che viene iniettato nel corpo un RNA messaggero modificato in laboratorio. Questo RNA messaggero modificato trasporta alle cellule immunitario del nostro corpo le informazioni necessarie per sintetizzare la proteina (SPIKE) usata dal Sars-Cov-2 per infettare l\'uomo. Il vaccino ha un\'efficacia dell\' 94,1%</string>
    <string name="jj">Il vaccino Johnson&amp;Johnson prevede 1 singola dose di vaccino. E\' un virus a vettore virale, ciò significa che viene iniettato nel corpo un virus modificato in laboratorio ed inattivo. In particolar modo viene iniettato nel corpo un adenovirus tipico degli uomini (Ad26) che porta alle cellule immunitarie del nostro corpo l\'informazione necessaria per proteggersi dalla proteina (SPIKE) usata dal Sars-Cov-2 per infettare l\'uomo. Il vaccino ha un\'efficacia dell\' 85%</string>
    <string name="vax">Il vaccino Vaxzevria (ex Astrazeneca) prevede 2 dosi di vaccino che devono essere somministrate almeno a 4 settimane di distanza. E\' un virus a vettore virale, ciò significa che viene iniettato nel corpo un virus modificato in laboratorio ed inattivo. In particolar modo viene iniettato nel corpo un virus tipico degli scimpanzé che porta alle cellule immunitarie del nostro corpo l\'informazione necessaria per proteggersi dalla proteina (SPIKE) usata dal Sars-Cov-2 per infettare l\'uomo. Il vaccino ha un\'efficacia dell\' 82,4%</string>
    <string name="noCert">CI DISPIACE. NON SEI ANCORA STATO CERTIFICATO.</string>
    <string  name="Cert">COMPLIMENTI!</string>
    <string name="infoNoCert">Ti sei vaccinato con PFIZER il 1/05/2021 e devi attendere almeno il 28/05/2021 per la seconda dose </string>
    <string name="infoCert">Hai ottenuto tutte le dosi necessarie per ottere un certificato. Ecco a te il tuo certificato di vaccinazione</string>
    <string name="hyperlinkReportVaccini">Clicca <a href="https://www.governo.it/it/cscovid19/report-vaccini">qui</a> per visualizzare i report dei vaccini in tempo reale</string>
    <string name="fakeNews">FAKE NEWS</string>
    <string name="falso1">Le mascherine non proteggono dalle nuove varianti del virus</string>
    <string name="vero1">L\'uso delle mascherine contrasta la diffusione delle nuove varianti. Non ci sono prove che le nuove varianti si trasmettano in modo diverso</string>
    <string name="falso2">Il vaccino rende immuni le persone a cui è stato somministrato</string>
    <string name="vero2">I vaccini sono diversi uno dall\'altro. Alcuni vaccini sono monodose e garantiscono immunità dopo pochi giorni dalla somministrazione. Altri, invece, prevedono una seconda dose dopo 2/4 settimane e un altro paio di giorni affinchè il vaccino faccia effetto</string>
    <string name="falso3">I vaccini sono stato sviluppati troppo velocemente e non sono sicuri</string>
    <string name="vero3">I vaccini sono sicuri. Prima di essere distribuiti su larga scala vengono testati su soggetti volontari e devono superare diverse prove di sicurezza ed efficacia</string>
    <string name="falso4">Dopo il vaccino posso non rispettare più le regole perchè non posso trasmettere il virus</string>
    <string name="vero4">Il vaccino non blocca l\'entrata e l\'uscita del Covid-19 dal corpo. Serve ad attivare i meccanismi di difesa del corpo affinchè non si manifestino i sintomi</string>
    <string name="questionario">QUESTIONARIO</string>
    <string name="descrizioneQuest">Attraverso questo questionario interattivo vogliamo testare la tua conoscienza sul covid, sui vaccini e sulla fake news? Pronti? VIA</string>
    <string name="domanda1">Domanda 1</string>
    <string name="quest1">Il Pfizer è un vaccino...</string>
    <string name="answer1.1">mRNA</string>
    <string name="answer1.2">vettore virale</string>
    <string name="domanda2">Domanda 2</string>
    <string name="quest2">Quando è partito il primo lockdown in Italia?</string>
    <string name="answer2.1">30/03/2020</string>
    <string name="answer2.2">09/03/2020</string>
    <string name="domanda3">Domanda 3</string>
    <string name="quest3">In data 01/05/2021 quante dosi di vaccino sono state somministrate in Italia?</string>
    <string name="answer3.1">Più di 15 milioni</string>
    <string name="answer3.2">Meno di 15 milioni</string>
    <string name="domanda4">Domanda 4</string>
    <string name="quest4">La febbre è un sintomo comune del Covid-19?</string>
    <string name="answer4.1">Vero</string>
    <string name="answer4.2">Falso</string>
    <string name="domanda5">Domanda 5</string>
    <string name="quest5">In zona arancione è possibile spostarsi tra comuni senza autocertifazione?</string>
    <string name="answer5.1">Vero</string>
    <string name="answer5.2">Falso</string>
    <string name="submit">Conferma</string>
    <string name="restart">Azzera</string>
</resources>
