<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fonta.piattaforma.Vaccini"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vaccini"
        android:layout_centerHorizontal="true"
        android:id="@+id/infoVacciniTextView"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titlePfizer"
        android:text="@string/titlePfizer"
        android:layout_below="@id/infoVacciniTextView"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pfizer"
        android:layout_margin="2dp"
        android:text="@string/pfizer"
        android:layout_below="@id/titlePfizer"
        android:textSize="15sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleModerna"
        android:text="@string/titleModerna"
        android:layout_below="@id/pfizer"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/moderna"
        android:layout_margin="5dp"
        android:text="@string/moderna"
        android:layout_below="@id/titleModerna"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleJJ"
        android:text="@string/titlejj"
        android:layout_below="@id/moderna"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jj"
        android:layout_margin="5dp"
        android:text="@string/jj"
        android:layout_below="@id/titleJJ"
        android:textSize="15sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleVaxzevria"
        android:text="@string/titleVaxzevria"
        android:layout_below="@id/jj"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vaxzevria"
        android:layout_margin="5dp"
        android:text="@string/vax"
        android:layout_below="@id/titleVaxzevria"
        android:textSize="15sp"

        />

    </RelativeLayout>

</ScrollView>